// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge snapshot color blue 1`] = `
<div
  class="absolute right-0 border-solid border-slate-100 text-center text-2xs font-medium uppercase leading-none antialiased bg-blue-600 border-blue-100 text-white rounded-full min-w-4 p-1 -top-1"
/>
`;

exports[`Badge snapshot color gray 1`] = `
<div
  class="absolute right-0 border-solid border-slate-100 text-center text-2xs font-medium uppercase leading-none antialiased bg-slate-600 border-slate-100 text-white rounded-full min-w-4 p-1 -top-1"
/>
`;

exports[`Badge snapshot color green 1`] = `
<div
  class="absolute right-0 border-solid border-slate-100 text-center text-2xs font-medium uppercase leading-none antialiased bg-green-600 border-green-100 text-white rounded-full min-w-4 p-1 -top-1"
/>
`;

exports[`Badge snapshot position bottom 1`] = `
<div
  class="absolute right-0 border-solid border-slate-100 text-center text-2xs font-medium uppercase leading-none antialiased bg-slate-600 border-slate-100 text-white rounded-full min-w-4 p-1 bottom-1"
/>
`;

exports[`Badge snapshot position top 1`] = `
<div
  class="absolute right-0 border-solid border-slate-100 text-center text-2xs font-medium uppercase leading-none antialiased bg-slate-600 border-slate-100 text-white rounded-full min-w-4 p-1 -top-1"
/>
`;

exports[`Badge snapshot shape circle 1`] = `
<div
  class="absolute right-0 border-solid border-slate-100 text-center text-2xs font-medium uppercase leading-none antialiased bg-slate-600 border-slate-100 text-white rounded-full min-w-4 p-1 -top-1"
/>
`;

exports[`Badge snapshot shape square 1`] = `
<div
  class="absolute right-0 border-solid border-slate-100 text-center text-2xs font-medium uppercase leading-none antialiased bg-slate-600 border-slate-100 text-white rounded-md min-w-4 p-1 -top-1"
/>
`;

exports[`Badge snapshot size size 1`] = `
<div
  class="absolute right-0 border-solid border-slate-100 text-center text-2xs font-medium uppercase leading-none antialiased bg-slate-600 border-slate-100 text-white rounded-full min-w-6 p-1 -top-2"
/>
`;

exports[`Badge snapshot size sm 1`] = `
<div
  class="absolute right-0 border-solid border-slate-100 text-center text-2xs font-medium uppercase leading-none antialiased bg-slate-600 border-slate-100 text-white rounded-full min-w-4 p-1 -top-1"
/>
`;
